nodejs/versioned_docs/version-1.13.0/api/class-testconfig.mdx
---
id: class-testconfig
title: "TestConfig"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright Test provides many options to configure how your tests are collected and executed, for example `timeout` or `testDir`. These options are described in the [TestConfig] object in the [configuration file](./test-configuration.mdx).

Playwright Test supports running multiple test projects at the same time. Project-specific options should be put to [testConfig.projects](./api/class-testconfig.mdx#test-config-projects), but top-level [TestConfig] can also define base options shared between all projects.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```js
// playwright.config.ts
import { PlaywrightTestConfig } from '@playwright/test';

const config: PlaywrightTestConfig = {
  timeout: 30000,
  globalTimeout: 600000,
  reporter: 'list',
  testDir: './tests',
};
export default config;
```

</TabItem>
<TabItem value="js">

```js
// playwright.config.js
// @ts-check

/** @type {import('@playwright/test').PlaywrightTestConfig} */
const config = {
  timeout: 30000,
  globalTimeout: 600000,
  reporter: 'list',
  testDir: './tests',
};

module.exports = config;
```

</TabItem>
</Tabs>


- [testConfig.expect](./api/class-testconfig.mdx#test-config-expect)
- [testConfig.forbidOnly](./api/class-testconfig.mdx#test-config-forbid-only)
- [testConfig.globalSetup](./api/class-testconfig.mdx#test-config-global-setup)
- [testConfig.globalTeardown](./api/class-testconfig.mdx#test-config-global-teardown)
- [testConfig.globalTimeout](./api/class-testconfig.mdx#test-config-global-timeout)
- [testConfig.grep](./api/class-testconfig.mdx#test-config-grep)
- [testConfig.grepInvert](./api/class-testconfig.mdx#test-config-grep-invert)
- [testConfig.maxFailures](./api/class-testconfig.mdx#test-config-max-failures)
- [testConfig.metadata](./api/class-testconfig.mdx#test-config-metadata)
- [testConfig.outputDir](./api/class-testconfig.mdx#test-config-output-dir)
- [testConfig.preserveOutput](./api/class-testconfig.mdx#test-config-preserve-output)
- [testConfig.projects](./api/class-testconfig.mdx#test-config-projects)
- [testConfig.quiet](./api/class-testconfig.mdx#test-config-quiet)
- [testConfig.repeatEach](./api/class-testconfig.mdx#test-config-repeat-each)
- [testConfig.reporter](./api/class-testconfig.mdx#test-config-reporter)
- [testConfig.reportSlowTests](./api/class-testconfig.mdx#test-config-report-slow-tests)
- [testConfig.retries](./api/class-testconfig.mdx#test-config-retries)
- [testConfig.shard](./api/class-testconfig.mdx#test-config-shard)
- [testConfig.testDir](./api/class-testconfig.mdx#test-config-test-dir)
- [testConfig.testIgnore](./api/class-testconfig.mdx#test-config-test-ignore)
- [testConfig.testMatch](./api/class-testconfig.mdx#test-config-test-match)
- [testConfig.timeout](./api/class-testconfig.mdx#test-config-timeout)
- [testConfig.updateSnapshots](./api/class-testconfig.mdx#test-config-update-snapshots)
- [testConfig.use](./api/class-testconfig.mdx#test-config-use)
- [testConfig.workers](./api/class-testconfig.mdx#test-config-workers)

## testConfig.expect {#test-config-expect}
- type: &#60;[Object]&#62;
  - `toMatchSnapshot` &#60;[Object]&#62;
    - `threshold` &#60;[number]&#62; Image matching threshold between zero (strict) and one (lax).

Configuration for the `expect` assertion library.

## testConfig.forbidOnly {#test-config-forbid-only}
- type: &#60;[boolean]&#62;

Whether to exit with an error if any tests or groups are marked as [test.only(title, testFunction)](./api/class-test.mdx#test-only) or [test.describe.only(title, callback)](./api/class-test.mdx#test-describe-only). Useful on CI.

## testConfig.globalSetup {#test-config-global-setup}
- type: &#60;[string]&#62;

Path to the global setup file. This file will be required and run before all the tests. It must export a single function.

Learn more about [global setup and teardown](./test-advanced.mdx#global-setup-and-teardown).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```js
// playwright.config.ts
import { PlaywrightTestConfig, devices } from '@playwright/test';

const config: PlaywrightTestConfig = {
  globalSetup: './global-setup',
};
export default config;
```

</TabItem>
<TabItem value="js">

```js
// playwright.config.js
// @ts-check

/** @type {import('@playwright/test').PlaywrightTestConfig} */
const config = {
  globalSetup: './global-setup',
};

module.exports = config;
```

</TabItem>
</Tabs>

## testConfig.globalTeardown {#test-config-global-teardown}
- type: &#60;[string]&#62;

Path to the global teardown file. This file will be required and run after all the tests. It must export a single function. See also [testConfig.globalSetup](./api/class-testconfig.mdx#test-config-global-setup).

Learn more about [global setup and teardown](./test-advanced.mdx#global-setup-and-teardown).

## testConfig.globalTimeout {#test-config-global-timeout}
- type: &#60;[number]&#62;

Maximum time in milliseconds the whole test suite can run. Zero timeout (default) disables this behavior. Useful on CI to prevent broken setup from running too long and wasting resources.

## testConfig.grep {#test-config-grep}
- type: &#60;[RegExp]|[Array]<[RegExp]>&#62;

Filter to only run tests with a title matching one of the patterns. For example, passing `grep: /cart/` should only run tests with "cart" in the title. Also available in the [command line](./test-cli.mdx) with the `-g` option.

`grep` option is also useful for [tagging tests](./test-annotations.mdx#tag-tests).

## testConfig.grepInvert {#test-config-grep-invert}
- type: &#60;[RegExp]|[Array]<[RegExp]>&#62;

Filter to only run tests with a title **not** matching one of the patterns. This is the opposite of [testConfig.grep](./api/class-testconfig.mdx#test-config-grep). Also available in the [command line](./test-cli.mdx) with the `--grep-invert` option.

`grepInvert` option is also useful for [tagging tests](./test-annotations.mdx#tag-tests).

## testConfig.maxFailures {#test-config-max-failures}
- type: &#60;[number]&#62;

The maximum number of test failures for the whole test suite run. After reaching this number, testing will stop and exit with an error. Setting to zero (default) disables this behavior.

Also available in the [command line](./test-cli.mdx) with the `--max-failures` and `-x` options.

## testConfig.metadata {#test-config-metadata}
- type: &#60;[Object]&#62;

Any JSON-serializable metadata that will be put directly to the test report.

## testConfig.outputDir {#test-config-output-dir}
- type: &#60;[string]&#62;

The output directory for files created during test execution. Defaults to `test-results`.

This directory is cleaned at the start. When running a test, a unique subdirectory inside the [testConfig.outputDir](./api/class-testconfig.mdx#test-config-output-dir) is created, guaranteeing that test running in parallel do not conflict. This directory can be accessed by [testInfo.outputDir](./api/class-testinfo.mdx#test-info-output-dir) and [testInfo.outputPath(pathSegments)](./api/class-testinfo.mdx#test-info-output-path).

Here is an example that uses [testInfo.outputPath(pathSegments)](./api/class-testinfo.mdx#test-info-output-path) to create a temporary file.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```js
import { test, expect } from '@playwright/test';
import fs from 'fs';

test('example test', async ({}, testInfo) => {
  const file = testInfo.outputPath('temporary-file.txt');
  await fs.promises.writeFile(file, 'Put some data to the file', 'utf8');
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');
const fs = require('fs');

test('example test', async ({}, testInfo) => {
  const file = testInfo.outputPath('temporary-file.txt');
  await fs.promises.writeFile(file, 'Put some data to the file', 'utf8');
});
```

</TabItem>
</Tabs>

## testConfig.preserveOutput {#test-config-preserve-output}
- type: &#60;"always"|"never"|"failures-only"&#62;

Whether to preserve test output in the [testConfig.outputDir](./api/class-testconfig.mdx#test-config-output-dir). Defaults to `'always'`.
* `'always'` - preserve output for all tests;
* `'never'` - do not preserve output for any tests;
* `'failures-only'` - only preserve output for failed tests.

## testConfig.projects {#test-config-projects}
- type: &#60;[Array]<[TestProject]>&#62;

Playwright Test supports running multiple test projects at the same time. See [TestProject] for more information.

## testConfig.quiet {#test-config-quiet}
- type: &#60;[boolean]&#62;

Whether to suppress stdio and stderr output from the tests.

## testConfig.repeatEach {#test-config-repeat-each}
- type: &#60;[number]&#62;

The number of times to repeat each test, useful for debugging flaky tests.

## testConfig.reportSlowTests {#test-config-report-slow-tests}
- type: &#60;[Object]&#62;
  - `max` &#60;[number]&#62; The maximum number of slow tests to report. Defaults to `5`.
  - `threshold` &#60;[number]&#62; Test duration in milliseconds that is considered slow. Defaults to 15 seconds.

Whether to report slow tests. Pass `null` to disable this feature.

Tests that took more than `threshold` milliseconds are considered slow, and the slowest ones are reported, no more than `max` number of them. Passing zero as `max` reports all slow tests that exceed the threshold.

## testConfig.reporter {#test-config-reporter}
- type: &#60;[string]|[Array]<[Object]>|"list"|"dot"|"line"|"json"|"junit"|"null"&#62;
  - `0` &#60;[string]&#62; Reporter name or module or file path
  - `1` &#60;[Object]&#62; An object with reporter options if any

The list of reporters to use. Each reporter can be:
* A builtin reporter name like `'list'` or `'json'`.
* A module name like `'my-awesome-reporter'`.
* A relative path to the reporter like `'./reporters/my-awesome-reporter.js'`.

You can pass options to the reporter in a tuple like `['json', { outputFile: './report.json' }]`.

Learn more in the [reporters guide](./test-reporters.mdx).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```js
// playwright.config.ts
import { PlaywrightTestConfig } from '@playwright/test';

const config: PlaywrightTestConfig = {
  reporter: 'line',
};
export default config;
```

</TabItem>
<TabItem value="js">

```js
// playwright.config.js
// @ts-check

/** @type {import('@playwright/test').PlaywrightTestConfig} */
const config = {
  reporter: 'line',
};

module.exports = config;
```

</TabItem>
</Tabs>

## testConfig.retries {#test-config-retries}
- type: &#60;[number]&#62;

The maximum number of retry attempts given to failed tests. Learn more about [test retries](./test-retries.mdx).

## testConfig.shard {#test-config-shard}
- type: &#60;[Object]&#62;
  - `total` &#60;[number]&#62; The total number of shards.
  - `current` &#60;[number]&#62; The index of the shard to execute, one-based.

Shard tests and execute only the selected shard. Specify in the one-based form like `{ total: 5, current: 2 }`.

Learn more about [parallelism and sharding](./test-parallel.mdx) with Playwright Test.

## testConfig.testDir {#test-config-test-dir}
- type: &#60;[string]&#62;

Directory that will be recursively scanned for test files. Defaults to the directory of the configuration file.

## testConfig.testIgnore {#test-config-test-ignore}
- type: &#60;[string]|[RegExp]|[Array]<[string]>|[Array]<[RegExp]>&#62;

Files matching one of these patterns are not executed as test files. Matching is performed against the absolute file path. Strings are treated as glob patterns.

For example, `'**/test-assets/**'` will ignore any files in the `test-assets` directory.

## testConfig.testMatch {#test-config-test-match}
- type: &#60;[string]|[RegExp]|[Array]<[string]>|[Array]<[RegExp]>&#62;

Only the files matching one of these patterns are executed as test files. Matching is performed against the absolute file path. Strings are treated as glob patterns.

By default, Playwright Test looks for files matching `.*(test|spec)\.(js|ts|mjs)`.

## testConfig.timeout {#test-config-timeout}
- type: &#60;[number]&#62;

Timeout for each test in milliseconds. Defaults to 30 seconds.

This is a base timeout for all tests. In addition, each test can configure its own timeout with [test.setTimeout(timeout)](./api/class-test.mdx#test-set-timeout).

## testConfig.updateSnapshots {#test-config-update-snapshots}
- type: &#60;"all"|"none"|"missing"&#62;

Whether to update expected snapshots with the actual results produced by the test run. Defaults to `'missing'`.
* `'all'` - All tests that are executed will update snapshots.
* `'none'` - No snapshots are updated.
* `'missing'` - Missing snapshots are created, for example when authoring a new test and running it for the first time. This is the default.

Learn more about [snapshots](./test-snapshots.mdx).

## testConfig.use {#test-config-use}
- type: &#60;[Fixtures]&#62;

Additional fixtures for this project. Most useful for specifying options, for example [fixtures.browserName](./api/class-fixtures.mdx#fixtures-browser-name). Learn more about [Fixtures] and [configuration](./test-configuration.mdx).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```js
// playwright.config.ts
import { PlaywrightTestConfig } from '@playwright/test';

const config: PlaywrightTestConfig = {
  use: {
    browserName: 'chromium',
  },
};
export default config;
```

</TabItem>
<TabItem value="js">

```js
// playwright.config.js
// @ts-check

/** @type {import('@playwright/test').PlaywrightTestConfig} */
const config = {
  use: {
    browserName: 'chromium',
  },
};

module.exports = config;
```

</TabItem>
</Tabs>

## testConfig.workers {#test-config-workers}
- type: &#60;[number]&#62;

The maximum number of concurrent worker processes to use for parallelizing tests.

Playwright Test uses worker processes to run tests. There is always at least one worker process, but more can be used to speed up test execution.

Defaults to one half of the number of CPU cores. Learn more about [parallelism and sharding](./test-parallel.mdx) with Playwright Test.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"